--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
             <div class="container">
             <h2 class="visually-hidden">Наші особливості</h2>
             <ul class="feature-list list">
-                <li class="antenna-icon">
-                    <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                <li class="feature-list__antenna-icon">
+                    <h3 class="feature-list__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="feature-list__text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
-                <li class="clock-icon">
-                    <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                <li class="feature-list__clock-icon">
+                    <h3 class="feature-list__title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="feature-list__text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
-                <li class="diagram-icon">
-                    <h3 class="title">ПЛАНУВАННЯ</h3>
-                    <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                <li class="feature-list__diagram-icon">
+                    <h3 class="feature-list__title">ПЛАНУВАННЯ</h3>
+                    <p class="feature-list__text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
-                <li class="astronaut-icon">
-                    <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                <li class="feature-list__astronaut-icon">
+                    <h3 class="feature-list__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="feature-list__text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </div>
@@ -87,19 +87,19 @@
         <section class="section work">
             <div class="container">
             
-            <h2 class="section-title">Чим ми займаємося</h2>
-            <ul class="work-list list">
-               <li class="item work-item">
+            <h2 class="section__title">Чим ми займаємося</h2>
+            <ul class="work__list list">
+               <li class="item work__item">
                 <img src="./images/comp.jpg" alt="comp" width="370" height="294">
-                <p class="work-list-text">Десктопні додатки</p>
+                <p class="work__text">Десктопні додатки</p>
              </li>
-              <li class="item work-item">
+              <li class="item work__item">
                   <img src="./images/tel.jpg" alt="tel" width="370" height="294">
-                  <p class="work-list-text">Мобільні додатки</p>
+                  <p class="work__text">Мобільні додатки</p>
             </li>
-            <li class="item work-item">
+            <li class="item work__item">
                 <img src="./images/pla.jpg" alt="pla" width="370" height="294">
-                <p class="work-list-text">Дизайнерські рішення</p>
+                <p class="work__text">Дизайнерські рішення</p>
             </li>
             </ul>
         </div>
@@ -109,13 +109,13 @@
     
         <section class="section our-team">
             <div class="container">
-            <h2 class="section-title">Наша команда</h2>
+            <h2 class="section__title">Наша команда</h2>
             <ul class="team-list list">
-                <li class="item">
+                <li class="team-list__item">
                  <img src="./images/ІгорДем'яненко.jpg" alt="ІгорДем'яненко" width="270" height="260">
                     <div class="team">
-                        <h3 class="title">Ігор Дем'яненко</h3>
-                        <p class="text team-text">Product Designer</p>
+                        <h3 class="team-list__title">Ігор Дем'яненко</h3>
+                        <p class="team-list__text ">Product Designer</p>
                         <ul class="list socials">
                             <li>
                                 <a href="" class="team-soc-link">
@@ -150,11 +150,11 @@
 
                     </div>
                 </li>
-                <li class="item">
+                <li class="team-list__item">
                     <img src="./images/ОльгаРєпіна.jpg" alt="ОльгаРєпіна" width="270" height="260">
                     <div class="team">
-                        <h3 class="title">Ольга Рєпіна</h3>
-                        <p class="text">Frontend Developer</p>
+                        <h3 class="team-list__title">Ольга Рєпіна</h3>
+                        <p class="team-list__text">Frontend Developer</p>
                         <ul class="list socials ">
                             <li>
                                 <a href="" class="team-soc-link">
@@ -187,12 +187,12 @@
                         </ul>
                 </div>
                 </li>
-                <li class="item">
+                <li class="team-list__item">
                     <img src="./images/МиколаТарасов.jpg" alt="МиколаТарасов" width="270" height="260">
                     <div class="team">
 
-                        <h3 class="title">Микола Тарасов</h3>
-                        <p class="text">Marketing</p>
+                        <h3 class="team-list__title">Микола Тарасов</h3>
+                        <p class="team-list__text">Marketing</p>
                         <ul class="list socials ">
                             <li>
                                 <a href="" class="team-soc-link">
@@ -225,11 +225,11 @@
                         </ul>
                     </div>
                 </li>
-                 <li class="item">
+                 <li class="team-list__item">
                      <img src="./images/МихайлоЄрмаков.jpg" alt="МихайлоЄрмаков" width="270" height="260">
                      <div class="team">
-                        <h3 class="title">Михайло Єрмаков</h3>
-                        <p class="text">UI Designer</p>
+                        <h3 class="team-list__title">Михайло Єрмаков</h3>
+                        <p class="team-list__text">UI Designer</p>
                         <ul class="list socials ">
                             <li>
                                 <a href="" class="team-soc-link">
