--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Studio</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 
 </head>
@@ -60,22 +61,22 @@
         <section class="section feature">
             <div class="container">
             <h2 class="visually-hidden">Наші особливості</h2>
-            <ul class="feature-list list">
-                <li class="feature-list__antenna-icon">
-                    <h3 class="feature-list__title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="feature-list__text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <ul class="feature__list list">
+                <li class="feature__antenna-icon">
+                    <h3 class="feature__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="feature__text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
-                <li class="feature-list__clock-icon">
-                    <h3 class="feature-list__title">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="feature-list__text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                <li class="feature__clock-icon">
+                    <h3 class="feature__title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="feature__text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
-                <li class="feature-list__diagram-icon">
-                    <h3 class="feature-list__title">ПЛАНУВАННЯ</h3>
-                    <p class="feature-list__text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                <li class="feature__diagram-icon">
+                    <h3 class="feature__title">ПЛАНУВАННЯ</h3>
+                    <p class="feature__text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
-                <li class="feature-list__astronaut-icon">
-                    <h3 class="feature-list__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="feature-list__text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                <li class="feature__astronaut-icon">
+                    <h3 class="feature__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="feature__text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </div>
